[gd_scene load_steps=5 format=3 uid="uid://mpoug6ye5ohr"]

[ext_resource type="Script" path="res://hud.gd" id="1_3xspm"]
[ext_resource type="FontFile" uid="uid://bxsp5oebxs2vh" path="res://fonts/Xolonium-Regular.ttf" id="1_8v3r7"]

[sub_resource type="InputEventAction" id="InputEventAction_ylfr3"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_p4cds"]
events = [SubResource("InputEventAction_ylfr3")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3xspm")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_8v3r7")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -162.5
offset_right = 240.0
offset_bottom = 162.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_8v3r7")
theme_override_font_sizes/font_size = 65
text = "Dodge if you can!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_8v3r7")
theme_override_font_sizes/font_size = 65
shortcut = SubResource("Shortcut_p4cds")
text = "Play"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_mesage_timer_timeout"]
